--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,12 @@
     ],
     "routes": [
         {
+            "src": "/api/v1/(.*)",
+            "dest": "index.js"
+        },
+        {
             "src": "/(.*)",
-            "dest":"index.js"
+            "dest": "index.js"
         }
     ],
     "env": {
